[package]
name = "uselog-rs"
version = "0.3.0"
edition = "2021"
description = "use log for outputing log in test and not test mode with one line code"
license = "Apache-2.0"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://rtstore.io"
keywords = ["log", "unittest", "println"]

[dependencies]

[dev-dependencies]
log = "0.4.0"
pretty_env_logger = "0.4.0"
